--- a/tests/suite/Makefile.am
+++ b/tests/suite/Makefile.am
@@ -72,6 +72,6 @@ nodist_eagain_cli_SOURCES = mini-eagain2.c
 
 noinst_PROGRAMS = eagain-cli
 
-nodist_check_SCRIPTS = eagain #testsrn
+nodist_check_SCRIPTS = eagain testsrn
 
-TESTS = eagain #testsrn
+TESTS = eagain testsrn
