x509paths tests moved to suite/.

--- a/tests/suite/Makefile.am
+++ b/tests/suite/Makefile.am
@@ -72,7 +72,7 @@ nodist_eagain_cli_SOURCES = mini-eagain2.c
 
 noinst_PROGRAMS = eagain-cli
 
-nodist_check_SCRIPTS = eagain testsrn testbig
+nodist_check_SCRIPTS = eagain testsrn testcompat chain
 
-TESTS = eagain testsrn testbig
+TESTS = eagain testsrn testcompat chain
 
