--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -24,7 +24,7 @@
 ACLOCAL_AMFLAGS = -I ../m4 -I ../gl/m4
 
 EXTRA_DIST = pakchois/README
-SUBDIRS = includes x509 accelerated
+SUBDIRS = includes x509 accelerated auth ext
 if ENABLE_MINITASN1
 SUBDIRS += minitasn1
 endif
@@ -55,30 +55,24 @@ DISTCLEANFILES = $(pkgconfig_DATA)
 
 lib_LTLIBRARIES = libgnutls.la
 
-SRP_COBJECTS = ext_srp.c gnutls_srp.c auth_srp.c auth_srp_passwd.c	\
-	auth_srp_sb64.c auth_srp_rsa.c
+SRP_COBJECTS = gnutls_srp.c
 
-PSK_COBJECTS = auth_psk.c auth_psk_passwd.c gnutls_psk.c	\
-	auth_dhe_psk.c
-
-SESSION_TICKET_COBJECTS = ext_session_ticket.c
+PSK_COBJECTS = gnutls_psk.c
 
 COBJECTS = gnutls_record.c gnutls_compress.c debug.c gnutls_cipher.c	\
 	gnutls_mbuffers.c gnutls_buffers.c gnutls_handshake.c gnutls_num.c \
 	gnutls_errors.c gnutls_algorithms.c gnutls_dh.c gnutls_kx.c	\
 	gnutls_priority.c gnutls_hash_int.c gnutls_cipher_int.c		\
-	gnutls_session.c gnutls_db.c x509_b64.c auth_anon.c		\
+	gnutls_session.c gnutls_db.c x509_b64.c 		\
 	gnutls_extensions.c gnutls_auth.c gnutls_v2_compat.c		\
-	gnutls_datum.c auth_rsa.c gnutls_session_pack.c gnutls_mpi.c	\
+	gnutls_datum.c gnutls_session_pack.c gnutls_mpi.c	\
 	gnutls_pk.c gnutls_cert.c gnutls_global.c gnutls_constate.c	\
 	gnutls_anon_cred.c pkix_asn1_tab.c gnutls_asn1_tab.c		\
-	gnutls_mem.c auth_cert.c gnutls_ui.c gnutls_sig.c auth_dhe.c	\
-	gnutls_dh_primes.c ext_max_record.c gnutls_alert.c		\
-	gnutls_str.c gnutls_state.c gnutls_x509.c ext_cert_type.c	\
-	gnutls_rsa_export.c auth_rsa_export.c ext_server_name.c		\
-	auth_dh_common.c gnutls_helper.c gnutls_supplemental.c		\
-	crypto.c random.c  ext_signature.c cryptodev.c system.c \
-	crypto-api.c ext_safe_renegotiation.c gnutls_privkey.c \
+	gnutls_mem.c gnutls_ui.c gnutls_sig.c cryptodev.c	\
+	gnutls_dh_primes.c gnutls_alert.c system.c		\
+	gnutls_str.c gnutls_state.c gnutls_x509.c gnutls_rsa_export.c  	\
+	gnutls_helper.c gnutls_supplemental.c crypto.c random.c  \
+	crypto-api.c gnutls_privkey.c \
 	pkcs11.c pkcs11_privkey.c gnutls_pubkey.c pkcs11_write.c locks.c \
 	pkcs11_secret.c hash.c gnutls_dtls.c system_override.c
 
@@ -93,18 +87,16 @@ HFILES = abstract_int.h debug.h gnutls_compress.h gnutls_cipher.h	\
 	gnutls_buffers.h gnutls_errors.h gnutls_int.h gnutls_dtls.h	\
 	gnutls_handshake.h gnutls_num.h gnutls_algorithms.h		\
 	gnutls_dh.h gnutls_kx.h gnutls_hash_int.h gnutls_cipher_int.h	\
-	gnutls_db.h gnutls_auth.h auth_anon.h gnutls_extensions.h	\
-	x509_b64.h gnutls_v2_compat.h gnutls_datum.h auth_cert.h	\
+	gnutls_db.h gnutls_auth.h gnutls_extensions.h	\
+	x509_b64.h gnutls_v2_compat.h gnutls_datum.h \
 	gnutls_mpi.h gnutls_pk.h gnutls_record.h gnutls_cert.h		\
 	gnutls_constate.h gnutls_global.h gnutls_sig.h gnutls_mem.h	\
-	ext_max_record.h gnutls_session_pack.h gnutls_str.h		\
-	gnutls_state.h gnutls_x509.h ext_cert_type.h			\
-	gnutls_rsa_export.h ext_server_name.h auth_dh_common.h		\
-	ext_srp.h gnutls_srp.h auth_srp.h auth_srp_passwd.h		\
-	gnutls_helper.h auth_psk.h auth_psk_passwd.h			\
-	gnutls_supplemental.h crypto.h random.h system.h		\
-	ext_session_ticket.h ext_signature.h gnutls_cryptodev.h		\
-	ext_safe_renegotiation.h locks.h gnutls_mbuffers.h pkcs11_int.h \
+	gnutls_session_pack.h gnutls_str.h		\
+	gnutls_state.h gnutls_x509.h 			\
+	gnutls_rsa_export.h gnutls_srp.h auth/srp.h auth/srp_passwd.h	\
+	gnutls_helper.h gnutls_supplemental.h crypto.h random.h system.h\
+	gnutls_cryptodev.h		\
+	locks.h gnutls_mbuffers.h pkcs11_int.h \
 	hash.h
 
 COBJECTS+=pakchois/pakchois.c pakchois/errors.c pakchois/dlopen.c
@@ -113,14 +105,15 @@ HFILES+=pakchois/pakchois.h pakchois/pakchois11.h pakchois/dlopen.h
 # Separate so we can create the documentation
 
 libgnutls_la_SOURCES = $(HFILES) $(COBJECTS) $(SRP_COBJECTS)	\
-	$(PSK_COBJECTS) $(SESSION_TICKET_COBJECTS) \
+	$(PSK_COBJECTS) \
 	gnutls.asn pkix.asn libgnutls.map
 
 libgnutls_la_LDFLAGS = -no-undefined \
 	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 
 libgnutls_la_LIBADD = ../gl/libgnu.la x509/libgnutls_x509.la \
-	accelerated/libaccelerated.la \
+	accelerated/libaccelerated.la ext/libgnutls_ext.la \
+	auth/libgnutls_auth.la \
 	$(LTLIBZ)  $(LTLIBINTL) $(LIBSOCKET) $(LTLIBDL)
 
 if ENABLE_OPENPGP
