--- a/lib/accelerated/Makefile.am
+++ b/lib/accelerated/Makefile.am
@@ -35,7 +35,7 @@ endif
 
 noinst_LTLIBRARIES = libaccelerated.la
 
-EXTRA_DIST = x86.h accelerated.h gnutls_cryptodev.h
+EXTRA_DIST = x86.h accelerated.h cryptodev.h
 libaccelerated_la_SOURCES = accelerated.c cryptodev.c
 libaccelerated_la_LIBADD =
 
