more files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -451,3 +451,5 @@ lib/accelerated/libaccelerated.la
 gl/time.h
 lib/accelerated/intel/libintel.la
 doc/cyclo/cyclo-gnutls.html
+lib/ext/libgnutls_ext.la
+lib/auth/libgnutls_auth.la
