--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1479,25 +1479,10 @@ extern "C"
 
   /* These are set on the credentials structure.
    */
-  
-  /* This is the same as gnutls_certificate_retrieve_function()
-   * but retrieves a gnutls_pcert_st which requires much less processing
-   * within the library.
+
+  /* use gnutls_certificate_set_retrieve_function2() in abstract.h
+   * instead. It's much more efficient.
    */
-  typedef int gnutls_certificate_retrieve_function2 (gnutls_session_t,
-                                                    const gnutls_datum_t *
-                                                    req_ca_rdn,
-                                                    int nreqs,
-                                                    const
-                                                    gnutls_pk_algorithm_t
-                                                    * pk_algos,
-                                                    int pk_algos_length,
-                                                    gnutls_pcert_st *);
-
-
-  void gnutls_certificate_set_retrieve_function2
-    (gnutls_certificate_credentials_t cred,
-     gnutls_certificate_retrieve_function2 * func);
 
   typedef int gnutls_certificate_retrieve_function (gnutls_session_t,
                                                     const
