guile: Fix tests to match the `exit' behavior introduced in Guile 2.0.1.
This fix makes tests behave correctly wrt. to the Guile bug fix at
<http://git.sv.gnu.org/cgit/guile.git/commit/?id=e309f3bf9ee910c4772353ca3ff95f6f4ef466b5>.

--- a/guile/modules/Makefile.am
+++ b/guile/modules/Makefile.am
@@ -1,5 +1,5 @@
 #  GnuTLS --- Guile bindings for GnuTLS.
-#  Copyright (C) 2007, 2010 Free Software Foundation, Inc.
+#  Copyright (C) 2007, 2010, 2011 Free Software Foundation, Inc.
 #
 #  GnuTLS is free software; you can redistribute it and/or
 #  modify it under the terms of the GNU Lesser General Public
@@ -25,4 +25,5 @@ documentation_modules = system/documentation/README		\
 
 EXTRA_DIST = gnutls/build/enums.scm gnutls/build/smobs.scm	\
 	     gnutls/build/utils.scm gnutls/build/priorities.scm	\
+	     gnutls/build/tests.scm				\
              $(documentation_modules)
