Added support for ECDHE-RSA ciphersuites.

--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -128,6 +128,7 @@ extern "C"
    * @GNUTLS_KX_RSA: RSA key-exchange algorithm.
    * @GNUTLS_KX_DHE_DSS: DHE-DSS key-exchange algorithm.
    * @GNUTLS_KX_DHE_RSA: DHE-RSA key-exchange algorithm.
+   * @GNUTLS_KX_ECDHE_RSA: ECDHE-RSA key-exchange algorithm.
    * @GNUTLS_KX_ANON_DH: Anon-DH key-exchange algorithm.
    * @GNUTLS_KX_ANON_ECDH: Anon-ECDH key-exchange algorithm.
    * @GNUTLS_KX_SRP: SRP key-exchange algorithm.
@@ -153,6 +154,7 @@ extern "C"
     GNUTLS_KX_PSK = 9,
     GNUTLS_KX_DHE_PSK = 10,
     GNUTLS_KX_ANON_ECDH = 11,
+    GNUTLS_KX_ECDHE_RSA = 12,
   } gnutls_kx_algorithm_t;
 
   /**
