gnutls_pk_params_st is used internally to transfer public key parameters. This replaces the raw bigint_t arrays.

--- a/lib/x509/Makefile.am
+++ b/lib/x509/Makefile.am
@@ -34,8 +34,8 @@ endif
 noinst_LTLIBRARIES = libgnutls_x509.la
 
 libgnutls_x509_la_SOURCES =	\
-	common.c		\
-	common.h		\
+	common.c key_encode.c	\
+	common.h key_decode.c	\
 	crl.c			\
 	crl_write.c		\
 	crq.c			\
