--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -622,6 +622,25 @@ extern "C"
   } gnutls_sign_algorithm_t;
 
   /**
+   * gnutls_ecc_curve_t:
+   * @GNUTLS_ECC_CURVE_INVALID: Cannot be known
+   * @GNUTLS_ECC_CURVE_SECP224R1: the SECP224R1 curve
+   * @GNUTLS_ECC_CURVE_SECP256R1: the SECP256R1 curve
+   * @GNUTLS_ECC_CURVE_SECP384R1: the SECP384R1 curve
+   * @GNUTLS_ECC_CURVE_SECP521R1: the SECP521R1 curve
+   *
+   * Enumeration of ECC curves.
+   */
+typedef enum
+{
+  GNUTLS_ECC_CURVE_INVALID=0,
+  GNUTLS_ECC_CURVE_SECP224R1,
+  GNUTLS_ECC_CURVE_SECP256R1,
+  GNUTLS_ECC_CURVE_SECP384R1,
+  GNUTLS_ECC_CURVE_SECP521R1,
+} gnutls_ecc_curve_t;
+
+  /**
    * gnutls_sec_param_t:
    * @GNUTLS_SEC_PARAM_UNKNOWN: Cannot be known
    * @GNUTLS_SEC_PARAM_WEAK: 50 or less bits of security
@@ -720,6 +739,10 @@ extern "C"
   const char *gnutls_sec_param_get_name (gnutls_sec_param_t param);
   unsigned int gnutls_sec_param_to_pk_bits (gnutls_pk_algorithm_t algo,
                                             gnutls_sec_param_t param);
+
+/* Elliptic curves */
+const char * gnutls_ecc_curve_get_name (gnutls_ecc_curve_t curve);
+int gnutls_ecc_curve_get_size (gnutls_ecc_curve_t curve);
 
 /* get information on the current session */
   gnutls_cipher_algorithm_t gnutls_cipher_get (gnutls_session_t session);
@@ -1772,6 +1795,7 @@ extern "C"
 #define GNUTLS_E_TIMEDOUT -319
 #define GNUTLS_E_USER_ERROR -320
 #define GNUTLS_E_ECC_NO_SUPPORTED_CURVES -321
+#define GNUTLS_E_ECC_UNSUPPORTED_CURVE -322
 
 #define GNUTLS_E_UNIMPLEMENTED_FEATURE -1250
 
