Added new headers.

--- a/lib/nettle/Makefile.am
+++ b/lib/nettle/Makefile.am
@@ -39,4 +39,4 @@ libcrypto_la_SOURCES = pk.c mpi.c mac.c cipher.c rnd.c init.c egd.c egd.h \
 	ecc_test.c ecc_map.c \
 	ecc_mulmod.c ecc_points.c ecc_projective_dbl_point_3.c \
 	ecc_projective_add_point.c ecc_projective_dbl_point.c \
-	ecc_sign_hash.c ecc_verify_hash.c 
+	ecc_sign_hash.c ecc_verify_hash.c gnettle.h
