--- a/lib/auth/Makefile.am
+++ b/lib/auth/Makefile.am
@@ -39,4 +39,4 @@ libgnutls_auth_la_SOURCES = anon.c cert.c dh_common.c dhe.c \
 	dhe_psk.c psk.c psk_passwd.c rsa.c rsa_export.c srp.c \
 	srp_passwd.c srp_rsa.c srp_sb64.c anon.h cert.h dh_common.h \
 	psk.h psk_passwd.h srp.h srp_passwd.h anon_ecdh.c \
-	ecdh_common.c
+	ecdh_common.c ecdh_common.h
