gnutls/crypto.h no longer includes functions to register ciphers. Thus the following functions -    gnutls_crypto_bigint_register -    gnutls_crypto_cipher_register -    gnutls_crypto_digest_register -    gnutls_crypto_mac_register -    gnutls_crypto_pk_register -    gnutls_crypto_rnd_register -    gnutls_crypto_single_cipher_register -    gnutls_crypto_single_digest_register -    gnutls_crypto_single_mac_register are only available internally via crypto-backend.h.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -71,10 +71,11 @@ COBJECTS = gnutls_record.c gnutls_compress.c debug.c gnutls_cipher.c	\
 	gnutls_mem.c gnutls_ui.c gnutls_sig.c gnutls_ecc.c		\
 	gnutls_dh_primes.c gnutls_alert.c system.c		\
 	gnutls_str.c gnutls_state.c gnutls_x509.c gnutls_rsa_export.c  	\
-	gnutls_helper.c gnutls_supplemental.c crypto.c random.c  \
+	gnutls_helper.c gnutls_supplemental.c random.c  \
 	crypto-api.c gnutls_privkey.c gnutls_pcert.c \
 	pkcs11.c pkcs11_privkey.c gnutls_pubkey.c pkcs11_write.c locks.c \
-	pkcs11_secret.c hash.c gnutls_dtls.c system_override.c
+	pkcs11_secret.c hash.c gnutls_dtls.c system_override.c \
+	crypto-backend.c
 
 
 if ENABLE_NETTLE
@@ -92,7 +93,7 @@ HFILES = abstract_int.h debug.h gnutls_compress.h gnutls_cipher.h	\
 	gnutls_mpi.h gnutls_pk.h gnutls_record.h		\
 	gnutls_constate.h gnutls_global.h gnutls_sig.h gnutls_mem.h	\
 	gnutls_session_pack.h gnutls_str.h		\
-	gnutls_state.h gnutls_x509.h 			\
+	gnutls_state.h gnutls_x509.h crypto-backend.h			\
 	gnutls_rsa_export.h gnutls_srp.h auth/srp.h auth/srp_passwd.h	\
 	gnutls_helper.h gnutls_supplemental.h crypto.h random.h system.h\
 	locks.h gnutls_mbuffers.h pkcs11_int.h \
