--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -65,7 +65,7 @@ ctests = simple gc set_pkcs12_cred certder certuniqueid mpi			\
 	crq_apis init_roundtrip pkcs12_s2k_pem dn2 mini-eagain		\
 	nul-in-x509-names x509_altname pkcs12_encode mini-x509		\
 	mini-x509-rehandshake rng-fork mini-eagain-dtls cipher-test 	\
-	x509cert #gendh
+	x509cert x509cert-tl #gendh
 
 if ENABLE_OPENSSL
 ctests +=  openssl
